--- a/University.Views/EditResearchProjectView.xaml
+++ b/University.Views/EditResearchProjectView.xaml
@@ -23,7 +23,7 @@
         </Grid.ColumnDefinitions>
         <Button Content="Back" Grid.Row="0" Grid.Column="0" Command="{Binding Back}" Margin="5,5,5,0" Width="100" HorizontalAlignment="Left" Style="{StaticResource PrimaryButton}" Tag="&#xE72B;" />
         <Button Content="Save" Grid.Row="0" Grid.Column="1" Command="{Binding Save}" Margin="5,5,5,0" Width="100" HorizontalAlignment="Right" Style="{StaticResource PrimaryButton}" Tag="&#xE74E;" />
-        <GroupBox Header="Project Details" Grid.Row="1" Grid.Column="0" Margin="5" Padding="10">
+        <GroupBox Header="Project Details" Grid.Row="1" Grid.Column="0" Margin="5,5,5,5" Padding="10" Grid.RowSpan="2">
             <StackPanel>
                 <WrapPanel Margin="0,0,0,5">
                     <TextBlock Text="Title" Style="{StaticResource PrimaryTextBlock}" />
@@ -46,13 +46,10 @@
                     <TextBlock Text="Budget" Style="{StaticResource PrimaryTextBlock}" />
                     <TextBox Text="{Binding Budget, ValidatesOnDataErrors=True}" Style="{StaticResource PrimaryTextBox}" MinWidth="200" Width="217" />
                 </WrapPanel>
-                <WrapPanel Margin="0,0,0,5">
-                    <TextBlock Text="Members" Style="{StaticResource PrimaryTextBlock}" />
-                    <TextBox Text="{Binding TeamMember, ValidatesOnDataErrors=True}" Style="{StaticResource PrimaryTextBox}" MinWidth="200" Width="217" />
-                </WrapPanel>
+
             </StackPanel>
         </GroupBox>
-        <GroupBox Header="Assigned FacultyMembers" Grid.Row="1" Grid.Column="1" Margin="0,5,5,5" Padding="10">
+        <GroupBox Header="Assigned FacultyMembers" Grid.Row="1" Grid.Column="1" Margin="0,5,5,63" Padding="10">
             <ItemsControl ItemsSource="{Binding AssignedFacultyMembers}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
@@ -67,6 +64,30 @@
                                         <Binding Path="Name"/>
                                         <Binding Path="Position"/>
                                         <Binding Path="Email"/>
+                                    </MultiBinding>
+                                </TextBlock.Text>
+                            </TextBlock>
+                            <CheckBox IsChecked="{Binding IsSelected}" Grid.Column="1" />
+                        </Grid>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ItemsControl>
+        </GroupBox>
+        <GroupBox Header="Assigned FacultyMembers" Grid.Row="1" Grid.Column="1" Margin="0,84,5,5" Padding="10" Grid.RowSpan="2">
+            <ItemsControl ItemsSource="{Binding AssignedStudents}">
+                <ItemsControl.ItemTemplate>
+                    <DataTemplate>
+                        <Grid Margin="0,0,0,5">
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Column="0">
+                                <TextBlock.Text>
+                                    <MultiBinding StringFormat=" {0} ({1}, {2})">
+                                        <Binding Path="Name"/>
+                                        <Binding Path="StudentId"/>
+                                        <Binding Path="PESEL"/>
                                     </MultiBinding>
                                 </TextBlock.Text>
                             </TextBlock>
